# payload

./: Cargo.toml  EDUCATION.md  FlagIcons_Instructions.txt  ServerManager.pas  Unit1.pas  UnitFileManager.pas  UnitHiddenVNC.pas  UnitLibVpxPayload.pas  UnitRemoteExecution.pas  UnitRemoteMonitoring.pas  notes.txt  veh_demo.rs
client/: builder.bat
client/plugins/HiddenVNCPlugin/: main - Kopya.cpp  main.cpp
client/plugins/RecoveryPlugin/: bin2header.py  build.bat  main.cpp  proxydll.cpp  proxydll_payload.h
client/plugins/RemoteExecutionPlugin/: build.bat  main.cpp
client/plugins/RemoteMonitoringPlugin/: build.bat  libvpx_payload.h  main.cpp
client/src/: main.cpp
injector/: build_log.txt
injector/src/: main.cpp
shellcode_loader/: .gitignore  Cargo.toml
shellcode_loader/src/: main.rs  test_features.rs
shellcode_loader/src/core/: mod.rs  peb.rs  syscalls.rs
shellcode_loader/src/evasion/: mod.rs  obfuscation.rs  stack.rs
shellcode_loader/src/utils/: hash.rs
src/: main.rs
