[package]
name = "undetectable_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
] }
base64 = "0.22"
